[package]
name = "climate-cli"
version = "0.0.1"
edition = "2021"

license =  "MIT"
description = "climate-cli is a weather cli written in Rust, using the OpenWeather API"
authors = ["Gustavo Mendonça, <https://github.com/swxtz>"]
repository = "https://github.com/swxtz/climate-cli"
documentation = "https://docs.rs/crate/climate-cli"

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
publish = "cargo publish"
publish-dirty = "cargo publish --allow-dirty"
doc = "cargo doc --no-deps --open"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.0"
